# vive_provider

./: .gitignore  CMakeLists.txt  LICENSE  README.md  calibFile.txt  clientTest.py  coplanar.py  fieldPositions.json  generate_protobuf.sh  objloader.py  package.xml  requirements.txt  statistic.py  tmp_server.py  utils.py  vive_bullet.py  vive_bullet_client.py  vive_client.py  vive_data_visualization.py  vive_field_calibration.py  vive_logs.py  vive_pb2.py  vive_provider.py  vive_server.py  vive_server_auto_calib.py  vive_tag_positions.py  vive_utils.py  vive_visualizer.py  wks.yml
assets/: HTC_Vive_Tracker.mtl  controller.stl  controller.urdf  controller_zero.stl  plane.urdf  tracker.stl  tracker.urdf  tracker_x_led.stl  vr_tracker_vive_1_0.stl  vr_tracker_vive_x_led.stl
assets/ball/: ball.stl  robot.urdf
assets/field/: config.json  field.part  goalsally.part  goalsallyback.part  goalsopponent.part  goalsopponentback.part  lines.part  penaltyally.part  penaltyopponent.part  robot.urdf  table.part  table2.part  table3.part  table4.part
assets/lighthouse/: arrow.stl  box.stl  part.stl  robot.urdf
chrony/: chrony.md
generated_py/proto/: vive_pb2.py
include/vive_provider/: udp_message_manager.h  utils.h
old/: vive_capture_positions.py  vive_field_calibration.py  vive_server.py
proto/: vive.proto
src/: CMakeLists.txt
src/vive_provider/: sources.cmake  udp_message_manager.cpp  utils.cpp
tools/: log_manager.cpp
