<?xml version="1.0"?>
<package>
  <name>vive_provider</name>
  <version>0.0.0</version>
  <description>A package containing tools to export HTC Vive information to
  protobuf.</description>

  <maintainer email="lhofer@labri.fr">Ludovic Hofer</maintainer>
  <maintainer email="antoine.pirrone@gmail.com">Antoine Pirrone</maintainer>

  <author email="lhofer@labri.fr">Ludovic Hofer</author>
  <author email="antoine.pirrone@gmail.com">Antoine Pirrone </author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rhoban_utils</build_depend>
  <run_depend>rhoban_utils</run_depend>

</package>
